# scikit-matter

./: .codecov.yml  .gitignore  .readthedocs.yaml  CHANGELOG  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  Life_Expectancy_00_15.csv  MANIFEST.in  README.md  README.rst  contributors.txt  logo.eps  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  docs.yml  documentation-links.yml  lint.yml  release.yml  tests-dev.yml  tests.yml
benchmarks/: fps.py  r1_update.py
docs/: conf.py  requirements.txt
docs/source/: bibliography.rst  conf.py  contributing.rst  datasets.rst  gfrm.rst  index.rst  installation.rst  intro.rst  linear_models.rst  overlap.rst  pcovr.rst  preprocessing.rst  reference.rst  selection.rst  sparse_methods.rst  tutorials.rst  utils.rst
docs/src/: bibliography.rst  changelog.rst  conf.py  contributing.rst  datasets.rst  decomposition.rst  getting-started.rst  gfrm.rst  index.rst  installation.rst  intro.rst  pcovr.rst  preprocessing.rst  reference.rst  selection.rst  tutorials.rst  utils.rst
examples/: FeatureSelection-WHODataset.ipynb  FeatureSelection-WHODataset.py  FeatureSelection.ipynb  FeatureSelection.py  GCH-Roy.ipynb  OrthogonalRegressionNonAnalytic.ipynb  OrthogonalRegressionNonAnalytic.py  PCovR-WHODataset.ipynb  PCovR-WHODataset.py  PCovR.ipynb  PCovR.py  PCovR_Regressors.ipynb  PCovR_Regressors.py  PCovR_Scaling.ipynb  PCovR_Scaling.py  PlotGFRE.ipynb  PlotGFRE.py  PlotLFRE.ipynb  PlotLFRE.py  PlotPointwiseGFRE.ipynb  PlotPointwiseGFRE.py  README.rst  SampleSelection.ipynb  Selectors+Pipelines.py.ipynb  Selectors-Pipelines.ipynb  Selectors-Pipelines.py  fps_cur_ridgecv_pipeline.py  fps_ridgecv_pipeline.py  requirements.txt
examples/decomposition/: README.rst  sketchmap.py
examples/linear_model/: plot_orthogonal_regression_nonanalytic_behavior.ipynb
examples/metrics/: plot_gfrm.ipynb  plot_lfre.ipynb
examples/neighbors/: README.rst  pamm.py  sparse-kde.py
examples/pcovc/: KPCovC_Comparison.py  KPCovC_Hyperparameters.py  KPCovC_Moons.ipynb  KPCovC_Moons.py  KPCovC_Moons_linear.ipynb  KPCovC_Rings.ipynb  KPCovC_Rings_linear.ipynb  PCovC-BreastCancerDataset.ipynb  PCovC-BreastCancerDataset.py  PCovC-DecisionGraphForPaper.ipynb  PCovC-IrisDataset.ipynb  PCovC-IrisDataset.py  PCovC_Comparison.py  PCovC_Hyperparameters.py  PCovC_multioutput.py  README.rst  test_notebook.ipynb
examples/pcovr/: PCovR-WHODataset.py  PCovR.py  PCovR_Regressors.py  PCovR_Scaling.py  README.rst
examples/reconstruction/: PlotGFRE.py  PlotLFRE.py  PlotPointwiseGFRE.py  README.rst
examples/regression/: OrthogonalRegressionNonAnalytic.py  README.rst  Ridge2FoldCVRegularization.py
examples/selection/: FeatureSelection-WHODataset.py  FeatureSelection.py  GCH-ROY.ipynb  GCH-ROY.py  Selectors-Pipelines.py
paper/: Ice Selection.ipynb  Ice.ipynb  NeighborFig.ipynb  PCovR Charge Model.ipynb  WhoDataset-PCovR.ipynb  WhoDataset-Selection.ipynb  convex_hull_toy_figure.ipynb  paper.bib  paper.md
skcosmo/: __init__.py  _selection.py
skcosmo/SparseMethods/: SparseKPCA.py  Sparsified.py  __init__.py
skcosmo/datasets/: __init__.py  _base.py  make-csd-dataset.py  make_csd_1000r.py
skcosmo/decomposition/: __init__.py  _kernel_pcovr.py  _pcovr.py  kpcovr.py  pcovr.py
skcosmo/feature_selection/: __init__.py  _base.py  _greedy.py  fps.pyx  fps_benchmarker.py  pcov_cur.py  pcov_fps.py  simple_cur.py  simple_fps.py  voronoi_fps.py
skcosmo/linear_model/: __init__.py  _base.py  _ridge.py
skcosmo/metrics/: __init__.py  _reconstruction_measures.py
skcosmo/model_selection/: __init__.py
skcosmo/pcovr/: __init__.py  kpcovr.py  pcovr.py  pcovr_distances.py
skcosmo/preprocessing/: __init__.py  _data.py  _flexible_scaler.py  flexible_scaler.py
skcosmo/sample_selection/: __init__.py  _base.py  _greedy.py  _voronoi_fps.py  fps_benchmarker.py  pcov_cur.py  pcov_fps.py  simple_cur.py  simple_fps.py
skcosmo/selection/: CUR.py  FPS.py  VoronoiFPS.py  __init__.py  _base.py  orthogonalizers.py
skcosmo/sparse/: IncrementalSparseKPCA.py  IncrementalSparseKPCovR.py  IncrementalSparseKRR.py
skcosmo/sparse_methods/: SparseKPCA.py  __init__.py
skcosmo/sparsified/: SparseKPCA.py  Sparsified.py  __init__.py  _base.py  sparse_kernel_pca.py
skcosmo/utils/: __init__.py  _orthogonalizers.py  _pcovr_utils.py  _progress_bar.py  eig_solver.py  kernel_extras.py  orthogonalizers.py  pcovr_utils.py  rank_one.py  rank_one_updates.py  roupdate.pyx
skmatter/: _selection.py
skmatter/datasets/: _base.py  make_csd_1000r.py
skmatter/decomposition/: _kernel_pcovr.py  _pcovr.py
skmatter/feature_selection/: _base.py
skmatter/linear_model/: __init__.py  _base.py  _ridge.py
skmatter/metrics/: _reconstruction_measures.py
skmatter/model_selection/: _split.py
skmatter/preprocessing/: _data.py
skmatter/sample_selection/: _base.py  _voronoi_fps.py
skmatter/utils/: __init__.py
src/skmatter/: __init__.py  _selection.py  (+1 more)
tests/: .coverage.tsf-492-wpa-0-247.epfl.ch.11311.XpjwIfdx  SparseKPCA.py  example.py  kernel_flexible_centerer.py  kernel_pcovc.py  kernel_pcovr.py  pcovc.py  pcovr.py  playground.py  requirements.txt  selection.py  sparse_kernel_centerer.py  test_check_estimators.py  test_clustering.py  test_datasets.py  test_dch.py  test_docs.py  test_eigsolver.py  test_example.py  test_feature_pcov_cur.py  test_feature_pcov_fps.py  test_feature_simple_cur.py  test_feature_simple_fps.py  test_greedy_feature_selector.py  test_greedy_sample_selector.py  test_greedy_selector.py  test_kernel_flexible_centerer.py  test_kernel_normalizer.py  test_kernel_pcovc.py  test_kernel_pcovc_experiment.py  test_kernel_pcovr.py  test_kpcovr.py  test_linear_model.py  test_metrics.py  test_model_selection.py  test_neighbors.py  test_orthogonalizers.py  test_pcovc.py  test_pcovr.py  test_pcovr_distances.py  (+18 more)
utilities/: CUR.py  chemiscope.py  classes.py  cmap2d_rb.npz  colorbars.py  deprecated.py  general.py  kernel_pcovr.mplstyle  kernels.py  kpcovr.py  old_classes.py  plotting.py  scalers.py
(+92 files in other folders)
