[build-system]
requires = [
    "setuptools >= 77",
    "setuptools_scm >= 8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "skmatter"
description = "A collection of scikit-learn compatible utilities that implement methods born out of the materials science and chemistry communities."
authors = [
    {name = "Rose K. Cersonsky", email="rose.cersonsky@wisc.edu"},
    {name = "Guillaume Fraux"},
    {name = "Sergei Kliavinek"},
    {name = "Alexander Goscinski"},
    {name = "Benjamin A. Helfrecht"},
    {name = "Victor P. Principe"},
    {name = "Philip Loche"},
    {name = "Michele Ceriotti"}
]
readme = "README.rst"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "scikit-learn >= 1.8, < 1.9",
    "scipy >= 1.15",  # explicit to adhere to scikit-learn dependencies
]
dynamic = ["version"]

[project.optional-dependencies]
examples = [
    "matplotlib",
    "pandas",
    "tqdm",
]

[project.urls]
homepage = "http://scikit-matter.readthedocs.io"
documentation = "http://scikit-matter.readthedocs.io"
repository = "https://github.com/scikit-learn-contrib/scikit-matter"
issues = "https://github.com/scikit-learn-contrib/scikit-matterissues"
changelog = "http://scikit-matter.readthedocs.io/en/latest/changelog.html"

[tool.check-manifest]
ignore = ["src/skmatter/_version.py"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "skmatter.__version__"}

[tool.setuptools_scm]
version_file = "src/skmatter/_version.py"

[tool.coverage.run]
branch = true
data_file = 'tests/.coverage'

[tool.coverage.report]
include = [
    "src/skmatter/*"
]

[tool.coverage.xml]
output = 'tests/coverage.xml'

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-append",
    "--cov-report=",
    "--import-mode=append",
]
# filterwarnings = [
#     "error",
# ]
testpaths = ["tests"]

[tool.ruff]
exclude = ["docs/src/examples/", "src/torchpme/_version.py"]
lint.ignore = [
    "F401",
    "E203",
    "D100",
    "D101",
    "D102",
    "D205",
    "D400",
    "D401",
]
line-length = 88
lint.select = [
    "D",
    "E",
    "F",
    "W",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"examples/**" = [
    "D205",
    "D400",
]
"tests/**" = [
    "D103",
]
