[metadata]
name = skcosmo
long_description = file: README.md
long_description_content_type = text/markdown

license_files = LICENSE
; author =
; author_email =
; description =
; keywords =
; url =
; classifiers =

[options]
include_package_data = True
zip_safe = False
packages = find:
install_requires =
    numpy
    scikit-learn>="0.24.0"
