[metadata]
name = skcosmo
long_description = file: README.md
long_description_content_type = text/markdown

license_files = LICENSE
author = Rose K. Cersonsky, Guillaume Fraux, Sergei Kliavinek, Alexander Goscinski, Benjamin A. Helfrecht, Michele Ceriotti
author_email = rose.cersonsky@epfl.ch
description = A collection of scikit-learn compatible utilities that implement methods developed in the COSMO laboratory
; keywords =
url = http://scikit-cosmo.readthedocs.io
classifiers = Development Status :: 3 - Alpha
		Environment :: Console
		Intended Audience :: Science/Research
		License :: OSI Approved :: BSD License
		Natural Language :: English
		Programming Language :: Python
		Topic :: Scientific/Engineering

[options]
include_package_data = True
zip_safe = True
packages = find:
install_requires = numpy
                   scikit-learn>="0.24.0"

