[metadata]
name = skmatter
long_description = file: README.md
long_description_content_type = text/markdown

license_files = LICENSE
author = Rose K. Cersonsky, Guillaume Fraux, Sergei Kliavinek, Alexander Goscinski, Benjamin A. Helfrecht, Victor P. Principe, Michele Ceriotti
author_email = rose.cersonsky@epfl.ch
description = A collection of scikit-learn compatible utilities that implement methods born out of the materials science and chemistry communities.
; keywords =
url = http://scikit-matter.readthedocs.io
classifiers = Development Status :: 3 - Alpha
		Environment :: Console
		Intended Audience :: Science/Research
		License :: OSI Approved :: BSD License
		Natural Language :: English
		Programming Language :: Python
		Topic :: Scientific/Engineering

[options]
include_package_data = True
zip_safe = True
packages = find:
install_requires =
	numpy
    scikit-learn>=1.1.0
